feat(url) fix backend url in vercel config and add live url in Readme.

--- a/02_Basic-FullStack-App/client/vercel.json
+++ b/02_Basic-FullStack-App/client/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://backend-labs-gcrh.onrender.com/api/:path*"
+      "destination": "https://api.blab-2.gdsamrat.qzz.io/api/:path*"
     }
   ]
 }
