--- a/03_Video-Sharing-App/package.json
+++ b/03_Video-Sharing-App/package.json
@@ -11,6 +11,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./src/index.js",
+    "dev": "node --watch ./src/index.js",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
+    "mongoose": "^9.2.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.8.1"
   }
 }
