--- a/02_Basic-FullStack-App/server/package.json
+++ b/02_Basic-FullStack-App/server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "server",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -7,7 +8,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node --watch index.js"
   },
   "dependencies": {
     "dotenv": "^17.2.4",
