fix(vercel): Update API rewrite destination
- Changed source pattern for API rewrites
- Updated destination to a remote API endpoint

--- a/02_Basic-FullStack-App/vercel.json
+++ b/02_Basic-FullStack-App/vercel.json
@@ -13,8 +13,8 @@
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/server/index.js"
+      "source": "/api/:path*",
+      "destination": "https://api.blab-2.gdsamrat.qzz.io/api/:path*"
     },
     {
       "source": "/(.*)",
