--- a/02_Basic-FullStack-App/vercel.json
+++ b/02_Basic-FullStack-App/vercel.json
@@ -14,7 +14,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://api.blab-2.gdsamrat.qzz.io/api/:path*"
+      "destination": "https://blab-2.gdsamrat.qzz.io/api/:path*"
     },
     {
       "source": "/(.*)",
