--- a/02_Basic-FullStack-App/vercel.json
+++ b/02_Basic-FullStack-App/vercel.json
@@ -8,17 +8,19 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://blab-2.gdsamrat.qzz.io/api/:path*"
+      "source": "/api/(.*)",
+      "destination": "server/index.js"
     },
     {
       "source": "/(.*)",
-      "destination": "/client/$1"
+      "destination": "client/$1"
     }
   ]
 }
