--- a/02_Basic-FullStack-App/package.json
+++ b/02_Basic-FullStack-App/package.json
@@ -7,10 +7,13 @@
     "server"
   ],
   "scripts": {
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "npm run dev -w client",
     "dev:server": "npm run dev -w server",
     "start:server": "npm run start -w server",
-    "build:client": "npm run build -w client",
-    "install-all": "npm install"
+    "build:client": "npm run build -w client"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
