--- a/03_Video-Sharing-App/.env.example
+++ b/03_Video-Sharing-App/.env.example
@@ -1,8 +1,16 @@
-// Server port
+# Server port
 PORT=YOUR_PORT
 
-// MongoDB Atlas
+# MongoDB Atlas
 MONGODB_URI=YOUR_MONGODB_URL
 
 // CORS Origin
 CORS_ORIGIN=YOUR_CORS_ORIGIN
+
+# Access Tokens
+ACCESS_TOKEN_SECRET=YOUR_HASH_TOKEN
+ACCESS_TOKEN_EXPIRY=YOUR_ACCESS_TOKEN_EXPIRY_TIME
+
+# Refresh tokes
+REFRESH_TOKEN_SECRET=YOUR_HASH_TOKEN
+REFRESH_TOKEN_EXPIRY=YOUR_REFRESH_TOKEN_EXPIRY_TIME
