feat(config): update auth token and env vars
- Renamed auth env vars for clarity
- Adjusted cors origin variable name

--- a/03_Video-Sharing-App/.env.example
+++ b/03_Video-Sharing-App/.env.example
@@ -1,16 +1,16 @@
 # Server port
 PORT=YOUR_PORT
+NODE_ENV=development
 
 # MongoDB Atlas
-MONGODB_URI=YOUR_MONGODB_URL
+MONGODB_URI=your_mongodb_connection_string
 
 // CORS Origin
-CORS_ORIGIN=YOUR_CORS_ORIGIN
+CORS_ALLOWED_ORIGINS=YOUR_CORS_ALLOWED_ORIGINS
 
-# Access Tokens
-ACCESS_TOKEN_SECRET=YOUR_HASH_TOKEN
-ACCESS_TOKEN_EXPIRY=YOUR_ACCESS_TOKEN_EXPIRY_TIME
+# Auth Tokens
+JWT_ACCESS_TOKEN_SECRET=your_access_secret
+JWT_ACCESS_TOKEN_EXPIRES_IN=1d
 
-# Refresh tokes
-REFRESH_TOKEN_SECRET=YOUR_HASH_TOKEN
-REFRESH_TOKEN_EXPIRY=YOUR_REFRESH_TOKEN_EXPIRY_TIME
+JWT_REFRESH_TOKEN_SECRET=10d
+JWT_REFRESH_TOKEN_EXPIRES_IN=10d
