feat: add cloudinary and multer dependencies
- Added cloudinary for cloud storage
- Added multer for file uploads

--- a/03_Video-Sharing-App/.env.example
+++ b/03_Video-Sharing-App/.env.example
@@ -14,3 +14,9 @@ JWT_ACCESS_TOKEN_EXPIRES_IN=1d
 
 JWT_REFRESH_TOKEN_SECRET=10d
 JWT_REFRESH_TOKEN_EXPIRES_IN=10d
+
+
+# Cloudfinary
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
