--- a/03_Video-Sharing-App/package.json
+++ b/03_Video-Sharing-App/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "prettier": "^3.8.1"
   }
 }
