docs: update .env.example file
- Corrected typo for Cloudinary variable name
- Improved placeholder text for CORS_ALLOWED_ORIGINS

--- a/03_Video-Sharing-App/.env.example
+++ b/03_Video-Sharing-App/.env.example
@@ -5,8 +5,8 @@ NODE_ENV=development
 # MongoDB Atlas
 MONGODB_URI=your_mongodb_connection_string
 
-// CORS Origin
-CORS_ALLOWED_ORIGINS=YOUR_CORS_ALLOWED_ORIGINS
+# CORS Origin
+CORS_ALLOWED_ORIGINS=your_allowed_cors_origins
 
 # Auth Tokens
 JWT_ACCESS_TOKEN_SECRET=your_access_secret
@@ -16,7 +16,7 @@ JWT_REFRESH_TOKEN_SECRET=your_refresh_token
 JWT_REFRESH_TOKEN_EXPIRES_IN=10d
 
 
-# Cloudfinary
+# Cloudinary
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
