--- a/03_Video-Sharing-App/package.json
+++ b/03_Video-Sharing-App/package.json
@@ -11,8 +11,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "dev": "node --watch ./src/index.js",
+    "start": "node --import=tsx src/index.js",
+    "dev": "tsx watch src/index.js",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -27,7 +27,8 @@
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
