fix(package): correct application name in package.json

--- a/03_Video-Sharing-App/package.json
+++ b/03_Video-Sharing-App/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strea-mvault",
+  "name": "stream-vault",
   "author": "Gouranga Das Samrat",
   "private": true,
   "type": "module",
