--- a/03_Video-Sharing-App/apps/server/package.json
+++ b/03_Video-Sharing-App/apps/server/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "video-sharing-app",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Full stack video sharing app",
-  "repository": {
-    "type": "git",
-    "url": "github.com/GourangaDasSamrat/backend-labs/03_FullStack-Video-Sharing-App"
-  },
-  "license": "ISC",
-  "author": "Gouranga Das Samrat",
   "type": "module",
   "main": "index.js",
   "scripts": {
