--- a/03_Video-Sharing-App/package.json
+++ b/03_Video-Sharing-App/package.json
@@ -17,5 +17,10 @@
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite": "^8.0.0-beta.13"
+    }
   }
 }
