--- a/04_Blog-App/.env.example
+++ b/04_Blog-App/.env.example
@@ -1,5 +1,5 @@
 # Server port
-PORT=YOUR_PORT
+PORT=4000
 NODE_ENV=development
 
 # MongoDB Atlas
@@ -7,3 +7,6 @@ MONGODB_URI=your_mongodb_connection_string
 
 # CORS Origin
 CORS_ALLOWED_ORIGINS=your_allowed_cors_origins
+
+# Auth Tokens
+JWT_TOKEN_SECRET=your_access_secret
