--- a/04_Blog-App/.env.example
+++ b/04_Blog-App/.env.example
@@ -10,3 +10,8 @@ CORS_ALLOWED_ORIGINS=your_allowed_cors_origins
 
 # Auth Tokens
 JWT_TOKEN_SECRET=your_access_secret
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
